remove usage of obsolete IOUtils methods