@@ -24,6 +24,7 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.net.URISyntaxException;
+import java.nio.file.Files;
 import javax.imageio.ImageIO;
 
 import org.apache.pdfbox.pdmodel.PDDocument;
@@ -271,7 +272,7 @@ class PDImageXObjectTest
         try (PDDocument doc = new PDDocument())
         {
             File file = new File(PDImageXObjectTest.class.getResource(filename).toURI());
-            byte[] byteArray = IOUtils.toByteArray(new FileInputStream(file));
+            byte[] byteArray = Files.readAllBytes(file.toPath());
             PDImageXObject image = PDImageXObject.createFromByteArray(doc, byteArray, null);
             
             BufferedImage bim = ImageIO.read(PDImageXObjectTest.class.getResourceAsStream(filename));
@@ -288,7 +289,7 @@ class PDImageXObjectTest
         try (PDDocument doc = new PDDocument())
         {
             File file = new File(PDImageXObjectTest.class.getResource(filename).toURI());
-            byte[] byteArray = IOUtils.toByteArray(new FileInputStream(file));
+            byte[] byteArray = new FileInputStream(file).readAllBytes();
             PDImageXObject image = PDImageXObject.createFromByteArray(doc, byteArray, null);
             
             PDImageXObject expectedImage = CCITTFactory.createFromFile(doc, file);
@@ -304,7 +305,7 @@ class PDImageXObjectTest
         try (PDDocument doc = new PDDocument())
         {
             File file = new File(PDImageXObjectTest.class.getResource(filename).toURI());
-            byte[] byteArray = IOUtils.toByteArray(new FileInputStream(file));
+            byte[] byteArray = new FileInputStream(file).readAllBytes();
             PDImageXObject image = PDImageXObject.createFromByteArray(doc, byteArray, null);
             
             PDImageXObject expectedImage = JPEGFactory.createFromStream(doc, new FileInputStream(file));
